--- a/kafka_services/.env.example
+++ b/kafka_services/.env.example
@@ -1,4 +1,3 @@
-KAFKA_HOST=127.0.0.1
-KAFKA_PORT=9094
+KAFKA_SERVERS=["127.0.0.1:9094","127.0.0.1:9095","127.0.0.1:9096"]
 KAFKA_TOPIC=test
 KAFKA_GROUP_ID=rfid_group
