--- a/sqlalchemy_service/sync/docker-compose.yaml
+++ b/sqlalchemy_service/sync/docker-compose.yaml
@@ -1,37 +1,18 @@
 services:
-  kafka-0:
-    container_name: kafka_test_node_1
-    image: docker.io/bitnami/kafka:3.7
-    ports:
-      #      - "9092:9092"  # Проброс порта для внутренних подключений
-      #      - "9093:9093"  # Проброс порта для контроллера
-      - "9094:9094"  # Проброс порта для внешних подключений
+  db:
+    env_file:
+      - .env.example
+    container_name: example_postgres
+    image: postgres:16
+    restart: always
     volumes:
-      - kafka_test_data:/bitnami
-    environment:
-      -
-    deploy:
-      resources:
-        limits:
-          cpus: "0.5"  # Максимум 0.5 CPU
-          memory: "1g"  # Максимум 1 GB RAM
-        reservations:
-          cpus: "0.25"  # Минимум 0.25 CPU
-          memory: "512m"  # Минимум 512 MB RAM
-
-  kafka-ui:
-    container_name: kafka_test_ui
-    image: provectuslabs/kafka-ui:latest
+      - example_postgres_data:/var/lib/postgresql/data
+    #      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    expose:
+      - 5432
     ports:
-      - "8080:8080"
-    environment:
-      - KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS=kafka-0:9092  # Использует внутренний адрес для подключения к Kafka
-      - KAFKA_CLUSTERS_0_NAME=kraft
-    depends_on:
-      kafka-0:
-        condition: service_started
-
+      - "5444:5432"
 
 volumes:
-  kafka_test_data:
+  example_postgres_data:
     driver: local  # Драйвер по умолчанию (локальное хранилище)
