--- a/sqlalchemy_service/sync/.env.example
+++ b/sqlalchemy_service/sync/.env.example
@@ -2,4 +2,4 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5444
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-POSTGRES_DATABASE=postgres
+POSTGRES_DB=postgres
